Enable premium vendors to add multiple map pins and adjust free trial periods
Update vendor schema to support multiple map pins and adjust initial vendor free trial duration from 30 to 60 days.
